# OpenSynthetics

./: .gitignore  API_STATUS_REPORT.md  CONTRIBUTING.md  DEVELOPMENT_STATUS.md  Dockerfile  Dockerfile.datasette  README.md  SYSTEM_STATUS.md  demo_comprehensive.py  docker-compose.yml  push_to_github.sh  pyproject.toml  setup_dev.py  start_server.py  test_api_comprehensive.py
.github/: pull_request_template.md
demo_output/: customers.parquet
docs/: README.md  data_validation.md  quickstart.md
docs/api-reference/: complete_example.md  generation.md  index.md
docs/development/: extending.md  index.md
opensynthetics/: __init__.py
opensynthetics/api/: __init__.py  auth.py  main.py  middleware.py  startup.py
opensynthetics/api/models/: __init__.py  requests.py  responses.py
opensynthetics/api/routers/: __init__.py  integrations.py  projects.py
opensynthetics/cli/: __init__.py  main.py  scientific.py  synthetic.py  synthetic_typer.py
opensynthetics/core/: __init__.py  config.py  exceptions.py  mlx_utils.py  monitoring.py  security.py  workspace.py
opensynthetics/data_ops/: __init__.py  arxiv_client.py  embeddings.py  export_utils.py  pdf_processor.py  pubmed_client.py  validation.py
opensynthetics/datagen/: __init__.py  advanced_strategies.py  engine.py  scientific_strategies.py  synthetic_datasets.py  validation.py
opensynthetics/llm_core/: __init__.py  providers.py
opensynthetics/llm_core/agents/: __init__.py  base.py  coordinator.py  generator.py  multi_agent.py
opensynthetics/training/: llm_trainer.py
opensynthetics/training_eval/: benchmark.py  training.py
opensynthetics/web_ui/static/css/: components.css
opensynthetics/web_ui/static/js/: app.js  enhanced-features.js  google-drive.js  postman-integration.js
opensynthetics/web_ui/templates/: index.html
synthetic_output/: synthetic_dataset.parquet  synthetic_dataset_metadata.json
test_output/: test_data.parquet
tests/: test_synthetic_datasets.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_data_validation.py  test_generation_engine.py  test_workspace.py
