[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opensynthetics"
version = "0.1.0"
authors = [
    {name = "OpenSynthetics Team", email = "info@opensynthetics.io"},
]
description = "Advanced Synthetic Data Generation Platform"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiofiles>=24.1.0",
    "click>=8.1.8",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.6",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "loguru>=0.7.3",
    "orjson>=3.10.0",
    "pandas>=2.2.0",
    "pydantic>=2.11.0",
    "uvicorn>=0.34.0",
    # New dependencies for synthetic datasets and benchmarking
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "faker>=20.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jsonschema>=4.17.0",
    "pyarrow>=12.0.0",
    "fastparquet>=2023.8.0",
    "h5py>=3.8.0",
    "openpyxl>=3.1.0",
    "xlwt>=1.3.0",
    "tables>=3.8.0",
]

[project.optional-dependencies]
training = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "bitsandbytes>=0.41.0",
    "peft>=0.6.0",
    "safetensors>=0.4.0",
    "sentencepiece>=0.1.99",
    "protobuf>=4.21.0",
    "tensorboard>=2.14.0",
    "wandb>=0.16.0",
]
pdf = [
    "PyMuPDF>=1.23.0",
    "fitz>=0.0.1.dev2",
]
api = [
    "feedparser>=6.0.10",
    "requests>=2.31.0",
    "requests-toolbelt>=1.0.0",
]
benchmarking = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "bokeh>=3.2.0",
    "altair>=5.0.0",
]
export = [
    "pyarrow>=12.0.0",
    "fastparquet>=2023.8.0",
    "h5py>=3.8.0",
    "openpyxl>=3.1.0",
    "xlwt>=1.3.0",
    "tables>=3.8.0",
    "lz4>=4.3.0",
    "zstandard>=0.21.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "coverage>=7.3.0",
]
all = [
    "opensynthetics[training,pdf,api,benchmarking,export,dev]"
]

[project.urls]
"Homepage" = "https://github.com/opensynthetics/opensynthetics"
"Bug Tracker" = "https://github.com/opensynthetics/opensynthetics/issues"

[project.scripts]
opensynthetics = "opensynthetics.cli.main:main"

[project.entry-points."opensynthetics.strategies"]
conversation = "opensynthetics.datagen.strategies:ConversationStrategy"
instruction = "opensynthetics.datagen.strategies:InstructionStrategy"

[project.entry-points."opensynthetics.synthetic"]
customer_data = "opensynthetics.datagen.synthetic_datasets:DatasetTemplate.customer_data"
sales_data = "opensynthetics.datagen.synthetic_datasets:DatasetTemplate.sales_data"
iot_sensor_data = "opensynthetics.datagen.synthetic_datasets:DatasetTemplate.iot_sensor_data"

[tool.setuptools]
packages = ["opensynthetics"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "W"]
ignore = []

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 